# aca-fastapi-template

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: azure-dev.yaml  python-check.yaml
src/: Dockerfile  requirements.txt
