[project]
name = "aca-fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "gunicorn>=24.0.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]
src = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-ra --cov=src"
testpaths = [
    "src/api/",
    "src/gunicorn_test.py"
]
pythonpath = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
